fix: welcome on tablet

--- a/src/components/welcome/WelcomeSection.module.scss
+++ b/src/components/welcome/WelcomeSection.module.scss
@@ -31,7 +31,7 @@
     width: 100%;
   }
 
-  @media (max-width: 1180px) {
+  @media (max-width: 1280px) {
     background-size: 50% auto;
     background-position: right 20px center;
   }
